--- a/src/screens/DriverScreens/NavHeader/MenuBurger/MenuBurger.css
+++ b/src/screens/DriverScreens/NavHeader/MenuBurger/MenuBurger.css
@@ -1,15 +1,18 @@
 #menu-burger-container{
     display: flex;
-    position: absolute;
-    left: 115%;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
+    top: 50%;
+    left: 3.5em;
+    z-index: 4;
     width: 2em;
     height: 1.5em;
-    margin: 2em 0 0 0;
+    margin: 0;
     padding: 0;
     border: none;
     outline: none;
+    transform: translate(0, -50%);
 }
 
 .menu-burger-container-toggle{
