--- a/src/screens/DriverScreens/NavMenu/NavMenu.css
+++ b/src/screens/DriverScreens/NavMenu/NavMenu.css
@@ -3,29 +3,29 @@
     top: 0;
     left: 0;
     z-index: 5;
-    width: 18.25em;
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     transform: translate(-100%, 0);
-    transition: transform 1s linear;
-    border: 1px solid black;
-    background-color: white;
+    transition: transform .7s ease-in;
+    background-color: transparent;
 }
 
 .open-nav-container{
     transform: translate(0) !important;
+    transition: transform .5s ease-out !important;
 }
 
 #nav-list-container{
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 100%;
+    width: 18.25em;
     height: 100%;
     padding: 0;
     margin: 0;
-    border: 1px solid red;
+    background-color: white;
 }
 
 .nav-list-item{
